# claude-codex

./: .gitignore  AGENTS.md  Cargo.toml  README.md  run.sh
.github/workflows/: deploy-pages.yml
docs/specs/: claude-codex-model-selection.md
docs/superpowers/plans/: 2026-03-26-claude-codex-implementation.md  2026-03-26-claude-codex-model-selection-implementation.md
docs/superpowers/specs/: 2026-03-26-claude-codex-design.md  2026-03-26-claude-codex-docs-design.md  2026-03-27-claude-codex-landing-design.md
pages/: astro.config.mjs  package-lock.json  package.json
pages/src/components/: ArchitectureSection.astro  BuildSection.astro  FeaturesSection.astro  FooterSection.astro  HeroSection.astro  ModelsSection.astro  TopNav.astro
pages/src/data/: site.ts
pages/src/layouts/: BaseLayout.astro
pages/src/pages/: index.astro
src/: cli.rs  config.rs  error.rs  main.rs  models.rs  process.rs  server.rs  test_support.rs
src/auth/: mod.rs  openai.rs  provider.rs  session.rs  session_store.rs
src/backend/: openai.rs  provider.rs
src/handlers/: count_tokens.rs  messages.rs  mod.rs
src/protocol/: anthropic.rs  codex.rs  mapper.rs  mod.rs  openai.rs  stream.rs
tests/: cli_wrapper.rs  proxy_errors.rs  run_script.rs
