[package]
name = "claude-codex"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
futures-core = "0.3"
futures-util = "0.3"
oauth2 = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "net", "process", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
webbrowser = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
http-body-util = "0.1"
predicates = "3.1"
tempfile = "3.17"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
